--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ado Ekiti Homes - Find Your Next Accommodation</title>
+    <title>FWZ Homes - Find Your Next Accommodation</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
@@ -27,7 +27,7 @@
     <!-- Header & Navigation -->
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-indigo-600">AdoHomes</a>
+            <a href="#" class="text-2xl font-bold text-indigo-600">FWZ Homes</a>
             <div class="hidden md:flex items-center space-x-6">
                 <a href="#features" class="text-gray-600 hover:text-indigo-600">Features</a>
                 <a href="#listings" class="text-gray-600 hover:text-indigo-600">Listings</a>
@@ -312,8 +312,8 @@
                     <h3 class="text-lg font-semibold mb-4">Contact Us</h3>
                      <ul>
                         <li class="mb-2 flex items-center"><i class="fas fa-map-marker-alt mr-3"></i> Ado Ekiti, Ekiti State</li>
-                        <li class="mb-2 flex items-center"><i class="fas fa-phone-alt mr-3"></i> +234 123 456 7890</li>
-                        <li class="mb-2 flex items-center"><i class="fas fa-envelope mr-3"></i> support@adohomes.com</li>
+                        <li class="mb-2 flex items-center"><i class="fas fa-phone-alt mr-3"></i> +2349078039855</li>
+                        <li class="mb-2 flex items-center"><i class="fas fa-envelope mr-3"></i> fawazadebowale06@gmail.com</li>
                     </ul>
                 </div>
                  <div>
@@ -328,7 +328,7 @@
             </div>
             <hr class="border-gray-700 my-8"/>
             <div class="text-center text-gray-500">
-                <p>&copy; <span id="year"></span> AdoHomes. All Rights Reserved.</p>
+                <p>&copy; <span id="year"></span> FWZHomes. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
@@ -645,4 +645,5 @@
     </script>
 </body>
 </html>
+
 
