--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#" class="text-2xl font-bold text-indigo-600">FWZ Homes</a>
             <div class="hidden md:flex items-center space-x-6">
-                <a href="#features" class="text-gray-600 hover:text-indigo-600">Features</a>
-                <a href="#listings" class="text-gray-600 hover:text-indigo-600">Listings</a>
-                <a href="#locations" class="text-gray-600 hover:text-indigo-600">Locations</a>
-                <a href="#contact" class="text-gray-600 hover:text-indigo-600">Contact</a>
+                <a href="./Features.html" class="text-gray-600 hover:text-indigo-600">Features</a>
+                <a href="./Listings.html" class="text-gray-600 hover:text-indigo-600">Listings</a>
+                <a href="./Locations.html" class="text-gray-600 hover:text-indigo-600">Locations</a>
+                <a href="./Contact.html" class="text-gray-600 hover:text-indigo-600">Contact</a>
             </div>
             <!-- Auth Buttons -->
             <div id="auth-links" class="hidden md:flex items-center space-x-4">
@@ -50,10 +50,10 @@
         </nav>
         <!-- Mobile Menu -->
         <div id="mobile-menu" class="hidden md:hidden px-6 pb-4">
-            <a href="#features" class="block py-2 text-gray-600 hover:text-indigo-600">Features</a>
-            <a href="#listings" class="block py-2 text-gray-600 hover:text-indigo-600">Listings</a>
-            <a href="#locations" class="block py-2 text-gray-600 hover:text-indigo-600">Locations</a>
-            <a href="#contact" class="block py-2 text-gray-600 hover:text-indigo-600">Contact</a>
+            <a href="./Features.html" class="block py-2 text-gray-600 hover:text-indigo-600">Features</a>
+            <a href="./Listings.html" class="block py-2 text-gray-600 hover:text-indigo-600">Listings</a>
+            <a href="./Locations.html" class="block py-2 text-gray-600 hover:text-indigo-600">Locations</a>
+            <a href="./Contact.html" class="block py-2 text-gray-600 hover:text-indigo-600">Contact</a>
             <hr class="my-2"/>
             <!-- Mobile Auth Buttons -->
             <div id="mobile-auth-links">
@@ -193,15 +193,15 @@
                         <div class="p-6 flex flex-col flex-grow">
                             <span class="text-sm bg-indigo-100 text-indigo-800 px-3 py-1 rounded-full self-start">Apartment</span>
                             <h3 class="text-xl font-bold my-3">Modern 2-Bedroom Flat</h3>
-                            <p class="text-gray-600 mb-4"><i class="fas fa-map-marker-alt text-gray-400 mr-2"></i>Adebayo, Ado Ekiti</p>
+                            <p class="text-gray-600 mb-4"><i class="fas fa-map-marker-alt text-gray-400 mr-2"></i>Iworoko, Ado Ekiti</p>
                             <div class="text-gray-500 flex items-center gap-4 text-base mb-4">
                                 <span><i class="fas fa-bed mr-1"></i> 2</span>
                                 <span><i class="fas fa-bath mr-1"></i> 3</span>
                             </div>
                             <div class="mt-auto pt-4 border-t border-gray-100 flex justify-between items-center">
-                                <span class="text-indigo-600 text-xl font-semibold">₦350,000<span class="text-sm font-normal">/year</span></span>
+                                <span class="text-indigo-600 text-xl font-semibold">₦180,000<span class="text-sm font-normal">/year</span></span>
                                 <button class="book-now-btn bg-indigo-600 text-white px-4 py-2 text-sm font-semibold rounded-lg hover:bg-indigo-700 transition duration-300"
-                                        data-property-name="Modern 2-Bedroom Flat" data-property-price="350000" data-property-image="https://placehold.co/400x300/e2e8f0/4a5568?text=Modern+2-Bed">
+                                        data-property-name="Modern 2-Bedroom Flat" data-property-price="180000" data-property-image="https://placehold.co/400x300/e2e8f0/4a5568?text=Modern+2-Bed">
                                     Book Now
                                 </button>
                             </div>
@@ -219,7 +219,7 @@
                                 <span><i class="fas fa-bath mr-1"></i> 1</span>
                             </div>
                             <div class="mt-auto pt-4 border-t border-gray-100 flex justify-between items-center">
-                                <span class="text-indigo-600 text-xl font-semibold">₦180,000<span class="text-sm font-normal">/year</span></span>
+                                <span class="text-indigo-600 text-xl font-semibold">₦,000<span class="text-sm font-normal">/year</span></span>
                                 <button class="book-now-btn bg-indigo-600 text-white px-4 py-2 text-sm font-semibold rounded-lg hover:bg-indigo-700 transition duration-300"
                                         data-property-name="Cozy Student's Room" data-property-price="180000" data-property-image="https://placehold.co/400x300/cbd5e0/4a5568?text=Cozy+Self-Con">
                                     Book Now
@@ -232,16 +232,16 @@
                         <img src="https://placehold.co/400x300/b2f5ea/4a5568?text=Family+Bungalow" alt="Property Image" class="w-full h-56 object-cover">
                         <div class="p-6 flex flex-col flex-grow">
                            <span class="text-sm bg-purple-100 text-purple-800 px-3 py-1 rounded-full self-start">Bungalow</span>
-                            <h3 class="text-xl font-bold my-3">Spacious Family Bungalow</h3>
-                            <p class="text-gray-600 mb-4"><i class="fas fa-map-marker-alt text-gray-400 mr-2"></i>GRA, Ado Ekiti</p>
+                            <h3 class="text-xl font-bold my-3">Wide self Con</h3>
+                            <p class="text-gray-600 mb-4"><i class="fas fa-map-marker-alt text-gray-400 mr-2"></i>Phase 2</p>
                             <div class="text-gray-500 flex items-center gap-4 text-base mb-4">
                                 <span><i class="fas fa-bed mr-1"></i> 4</span>
                                 <span><i class="fas fa-bath mr-1"></i> 5</span>
                             </div>
                             <div class="mt-auto pt-4 border-t border-gray-100 flex justify-between items-center">
-                                <span class="text-indigo-600 text-xl font-semibold">₦800,000<span class="text-sm font-normal">/year</span></span>
+                                <span class="text-indigo-600 text-xl font-semibold">₦400,000<span class="text-sm font-normal">/year</span></span>
                                 <button class="book-now-btn bg-indigo-600 text-white px-4 py-2 text-sm font-semibold rounded-lg hover:bg-indigo-700 transition duration-300"
-                                        data-property-name="Spacious Family Bungalow" data-property-price="800000" data-property-image="https://placehold.co/400x300/b2f5ea/4a5568?text=Family+Bungalow">
+                                        data-property-name="Spacious Family Bungalow" data-property-price="400000" data-property-image="https://placehold.co/400x300/b2f5ea/4a5568?text=Family+Bungalow">
                                     Book Now
                                 </button>
                             </div>
@@ -263,27 +263,27 @@
                 </div>
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-6">
                     <a href="#" class="relative rounded-lg overflow-hidden h-64 group block">
-                        <img src="https://placehold.co/300x400/718096/ffffff?text=Adebayo" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-300">
+                        <img src="https://placehold.co/300x400/718096/ffffff?text=School+Gate" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-300">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-end p-4">
-                            <h3 class="text-white text-xl font-bold">Adebayo</h3>
+                            <h3 class="text-white text-xl font-bold">School Gate</h3>
                         </div>
                     </a>
                      <a href="#" class="relative rounded-lg overflow-hidden h-64 group block">
-                        <img src="https://placehold.co/300x400/9f7aea/ffffff?text=Fajuyi+Park" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-300">
+                        <img src="https://placehold.co/300x400/9f7aea/ffffff?text=Iworoko" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-300">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-end p-4">
-                            <h3 class="text-white text-xl font-bold">Fajuyi Park Area</h3>
+                            <h3 class="text-white text-xl font-bold">Iworoko</h3>
                         </div>
                     </a>
                      <a href="#" class="relative rounded-lg overflow-hidden h-64 group block">
-                        <img src="https://placehold.co/300x400/ed8936/ffffff?text=GRA" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-300">
+                        <img src="https://placehold.co/300x400/ed8936/ffffff?text=Phase+2" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-300">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-end p-4">
-                            <h3 class="text-white text-xl font-bold">GRA</h3>
+                            <h3 class="text-white text-xl font-bold">Phase 2</h3>
                         </div>
                     </a>
                     <a href="#" class="relative rounded-lg overflow-hidden h-64 group block">
-                        <img src="https://placehold.co/300x400/4299e1/ffffff?text=EKSU+Area" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-300">
+                        <img src="https://placehold.co/300x400/4299e1/ffffff?text=Osekita" class="w-full h-full object-cover transform group-hover:scale-110 transition-transform duration-300">
                         <div class="absolute inset-0 bg-black bg-opacity-50 flex items-end p-4">
-                            <h3 class="text-white text-xl font-bold">EKSU Area</h3>
+                            <h3 class="text-white text-xl font-bold">Osekita</h3>
                         </div>
                     </a>
                 </div>
@@ -296,7 +296,7 @@
         <div class="container mx-auto px-6 py-12">
             <div class="grid grid-cols-1 md:grid-cols-4 gap-8">
                 <div>
-                    <h3 class="text-xl font-bold mb-4">AdoHomes</h3>
+                    <h3 class="text-xl font-bold mb-4">SecureHomes</h3>
                     <p class="text-gray-400">Your trusted partner in finding the best accommodation in Ado Ekiti, Nigeria.</p>
                 </div>
                 <div>
@@ -305,7 +305,6 @@
                         <li class="mb-2"><a href="#" class="hover:text-indigo-400">About Us</a></li>
                         <li class="mb-2"><a href="#listings" class="hover:text-indigo-400">Properties</a></li>
                         <li class="mb-2"><a href="#" class="hover:text-indigo-400">Agent Portal</a></li>
-                        <li class="mb-2"><a href="#" class="hover:text-indigo-400">Blog</a></li>
                     </ul>
                 </div>
                 <div>
@@ -328,7 +327,7 @@
             </div>
             <hr class="border-gray-700 my-8"/>
             <div class="text-center text-gray-500">
-                <p>&copy; <span id="year"></span> FWZHomes. All Rights Reserved.</p>
+                <p>&copy; <span id="year"></span> SecureHomes. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
@@ -645,6 +644,7 @@
     </script>
 </body>
 </html>
+
 
 
 
