--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
             <a href="#" class="text-2xl font-bold text-indigo-600">FWZ Homes</a>
             <div class="hidden md:flex items-center space-x-6">
-                <a href="./Features.html" class="text-gray-600 hover:text-indigo-600">Features</a>
-                <a href="./Listings.html" class="text-gray-600 hover:text-indigo-600">Listings</a>
-                <a href="./Locations.html" class="text-gray-600 hover:text-indigo-600">Locations</a>
-                <a href="./Contact.html" class="text-gray-600 hover:text-indigo-600">Contact</a>
+                <a href="#features" class="text-gray-600 hover:text-indigo-600">Features</a>
+                <a href="#listings" class="text-gray-600 hover:text-indigo-600">Listings</a>
+                <a href="#location" class="text-gray-600 hover:text-indigo-600">Locations</a>
+                <a href="#contact" class="text-gray-600 hover:text-indigo-600">Contact</a>
             </div>
             <!-- Auth Buttons -->
             <div id="auth-links" class="hidden md:flex items-center space-x-4">
@@ -644,6 +644,7 @@
     </script>
 </body>
 </html>
+
 
 
 
