--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <!-- Header & Navigation -->
     <header class="bg-white shadow-md sticky top-0 z-50">
         <nav class="container mx-auto px-6 py-4 flex justify-between items-center">
-            <a href="#" class="text-2xl font-bold text-indigo-600">FWZ Homes</a>
+            <a href="#" class="text-2xl font-bold text-indigo-600">Secure Homes</a>
             <div class="hidden md:flex items-center space-x-6">
                 <a href="#features" class="text-gray-600 hover:text-indigo-600">Features</a>
                 <a href="#listings" class="text-gray-600 hover:text-indigo-600">Listings</a>
@@ -644,6 +644,7 @@
     </script>
 </body>
 </html>
+
 
 
 
