--- a/index.html
+++ b/index.html
@@ -72,6 +72,33 @@
     <main>
         <!-- Sections from previous step remain unchanged -->
         <!-- Hero Section -->
+
+        <section id="about">
+      <h2>What is PropTech?</h2>
+      <p>
+        PropTech (Property Technology) refers to how technology is used in real
+        estate — from online home listings to smart home devices. Here’s a
+        version that someone new to the field (like a student) can easily
+        understand:
+      </p>
+      <p>
+        Think of it as combining real estate + software/apps + data to make
+        property easier to find, manage, and use.
+      </p>
+    </section>
+
+    <section id="how-it-works">
+      <h2>How It Works</h2>
+      <ol>
+        <li>Users search properties by location, price, etc.</li>
+        <li>Map shows nearby options, distances.</li>
+        <li>Click a property: see images, details, maybe a video walkthrough.</li>
+        <li>Get contact info or schedule a visit.</li>
+      </ol>
+      <p>
+        (You can add diagrams or flowcharts here if you like.)
+      </p>
+    </section>
         <section class="hero-bg text-white">
             <div class="container mx-auto px-6 py-24 text-center">
                 <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">Find Your Perfect Home in Ado Ekiti</h1>
@@ -644,6 +671,7 @@
     </script>
 </body>
 </html>
+
 
 
 
