--- a/index.html
+++ b/index.html
@@ -289,6 +289,12 @@
                 </div>
             </div>
         </section>
+        <section id="map">
+      <h2>Map — Properties Around EKSU</h2>
+      <!-- This is where the map will go -->
+      <div id="mapid" style="height: 400px;"></div>
+      <p>Below is a map showing nearby properties and how far they are from EKSU (Ekiti State University).</p>
+        </section>        
     </main>
     
     <!-- Footer -->
@@ -422,7 +428,7 @@
         </div>
     </div>
 
-
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
 
@@ -641,9 +647,55 @@
             });
 
         });
+        
+        const eksuLat = 7.6214;  
+const eksuLng = 5.2238; 
+
+const map = L.map('mapid').setView([eksuLat, eksuLng], 14);
+
+L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+  maxZoom: 19,
+  attribution: '© OpenStreetMap contributors'
+}).addTo(map);
+
+L.marker([eksuLat, eksuLng]).addTo(map)
+  .bindPopup('EKSU (Ekiti State University)')
+  .openPopup();
+
+const properties = [
+  { name: 'House A', lat: 7.6300, lng: 5.2300 },
+  { name: 'House B', lat: 7.6150, lng: 5.2100 },
+];
+
+function distanceInKm(lat1, lng1, lat2, lng2) {
+  const R = 6371; 
+  const dLat = (lat2 - lat1) * Math.PI / 180;
+  const dLng = (lng2 - lng1) * Math.PI / 180;
+  const a = Math.sin(dLat/2) * Math.sin(dLat/2) +
+            Math.cos(lat1 * Math.PI/180) * Math.cos(lat2 * Math.PI/180) *
+            Math.sin(dLng/2) * Math.sin(dLng/2);
+  const c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
+  return R * c;
+}
+
+properties.forEach(prop => {
+  const d = distanceInKm(eksuLat, eksuLng, prop.lat, prop.lng).toFixed(2);
+  L.marker([prop.lat, prop.lng])
+    .addTo(map)
+    .bindPopup(`${prop.name} — ${d} km from EKSU`);
+});
+
+L.circle([eksuLat, eksuLng], {
+  color: 'blue',
+  fillColor: '#cce5ff',
+  fillOpacity: 0.2,
+  radius: 3000 
+}).addTo(map);
+
     </script>
 </body>
 </html>
+
 
 
 
