--- a/index.html
+++ b/index.html
@@ -72,35 +72,23 @@
     <main>
         <!-- Sections from previous step remain unchanged -->
         <!-- Hero Section -->
-        <section class="hero-bg text-white">
-            <div class="container mx-auto px-6 py-24 text-center">
-                <h1 class="text-4xl md:text-6xl font-bold leading-tight mb-4">Find Your Perfect Home in Ado Ekiti</h1>
-                <p class="text-lg md:text-xl text-gray-200 mb-8 max-w-3xl mx-auto">Discover apartments, self-contained rooms, and houses for rent from anywhere, at any time.</p>
-                
-                <!-- Search Bar -->
-                <div class="bg-white rounded-lg shadow-xl max-w-4xl mx-auto p-4 md:flex items-center gap-4">
-                    <div class="relative flex-grow mb-4 md:mb-0">
-                        <i class="fas fa-map-marker-alt absolute top-1/2 left-4 -translate-y-1/2 text-gray-400"></i>
-                        <input type="text" placeholder="Enter a location in Ado Ekiti (e.g., Adebayo)" class="w-full h-14 pl-12 pr-4 border border-gray-200 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500">
-                    </div>
-                    <div class="relative flex-grow mb-4 md:mb-0 md:w-1/4">
-                         <i class="fas fa-home absolute top-1/2 left-4 -translate-y-1/2 text-gray-400"></i>
-                         <select class="w-full h-14 pl-12 pr-4 border border-gray-200 rounded-lg appearance-none focus:outline-none focus:ring-2 focus:ring-indigo-500 bg-white">
-                            <option>Any Type</option>
-                            <option>Apartment</option>
-                            <option>Self-Contained</option>
-                            <option>Bungalow</option>
-                            <option>Duplex</option>
-                         </select>
-                         <i class="fas fa-chevron-down absolute top-1/2 right-4 -translate-y-1/2 text-gray-400 pointer-events-none"></i>
-                    </div>
-                    <button class="w-full md:w-auto bg-indigo-600 text-white h-14 px-8 rounded-lg hover:bg-indigo-700 transition duration-300 flex items-center justify-center">
-                        <i class="fas fa-search mr-2"></i>
-                        <span>Search</span>
-                    </button>
-                </div>
-            </div>
-        </section>
+        <!-- Hero Banner Section -->
+<section class="relative h-[90vh] flex items-center justify-center text-white">
+  <!-- Background Image -->
+  <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=1600&q=80" 
+       alt="Interior Home Design" 
+       class="absolute inset-0 w-full h-full object-cover opacity-80">
+
+  <!-- Dark Overlay for Readability -->
+  <div class="absolute inset-0 bg-black/50"></div>
+
+  <!-- Hero Content -->
+  <div class="relative z-10 text-center px-6">
+    <h1 class="text-5xl md:text-6xl font-bold mb-4">Find Your Next Accommodation</h1>
+    <p class="text-lg md:text-xl mb-6">Discover modern interiors, cozy apartments, and verified homes that suit your lifestyle.</p>
+    <button class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg">Get Started</button>
+  </div>
+</section>
 
         <!-- How It Works Section -->
         <section id="features" class="py-20 bg-white">
@@ -642,6 +630,7 @@
     </script>
 </body>
 </html>
+
 
 
 
