--- a/index.html
+++ b/index.html
@@ -28,24 +28,24 @@
     </div>
   </nav>
 
-<!-- Hero Banner Section -->
-<section class="relative h-[90vh] flex items-center justify-center text-white">
-  <!-- Background Image -->
-  <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=1600&q=80" 
-       alt="Interior Home Design" 
-       class="absolute inset-0 w-full h-full object-cover opacity-80">
+  <!-- Hero Banner Section -->
+  <section class="relative h-[90vh] flex items-center justify-center text-white">
+    <!-- Background Image -->
+    <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=1600&q=80" 
+         alt="Interior Home Design" 
+         class="absolute inset-0 w-full h-full object-cover opacity-80">
 
-  <!-- Dark Overlay for Readability -->
-  <div class="absolute inset-0 bg-black/50"></div>
+    <!-- Overlay -->
+    <div class="absolute inset-0 bg-black/50"></div>
 
-  <!-- Hero Content -->
-  <div class="relative z-10 text-center px-6">
-    <h1 class="text-5xl md:text-6xl font-bold mb-4">Find Your Next Accommodation</h1>
-    <p class="text-lg md:text-xl mb-6">Discover modern interiors, cozy apartments, and verified homes that suit your lifestyle.</p>
-    <button class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg">Get Started</button>
-  </div>
-</section>
-  
+    <!-- Hero Content -->
+    <div class="relative z-10 text-center px-6">
+      <h1 class="text-5xl md:text-6xl font-bold mb-4">Find Your Next Accommodation</h1>
+      <p class="text-lg md:text-xl mb-6">Discover modern interiors, cozy apartments, and verified homes that suit your lifestyle.</p>
+      <button class="bg-blue-600 hover:bg-blue-700 px-8 py-3 rounded-full text-white font-medium shadow-lg">Get Started</button>
+    </div>
+  </section>
+
   <!-- Footer -->
   <footer class="bg-white py-6 text-center text-gray-600 border-t mt-10">
     <p>&copy; 2025 Secure Home. All rights reserved.</p>
@@ -53,4 +53,3 @@
 
 </body>
 </html>
-
