--- a/index.html
+++ b/index.html
@@ -46,53 +46,49 @@
     </div>
   </section>
 
-    <!-- Featured Listings Section -->
+  <!-- Featured Listings by Category -->
   <section class="py-16 px-6 bg-gray-100">
     <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-12">
-      Featured Listings
+      Featured Listings by Location
     </h2>
 
-    <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-10 max-w-6xl mx-auto">
-      <!-- Card 1 -->
-      <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
-        <img src="https://images.unsplash.com/photo-1560448204-e02f11c3d0e2?auto=format&fit=crop&w=800&q=80" alt="Modern Apartment" class="w-full h-56 object-cover">
-        <div class="p-5">
-          <h3 class="text-xl font-semibold text-gray-800">Modern Apartment</h3>
-          <p class="text-gray-600 mt-2">2 Bedrooms · 2 Baths · Victoria Island</p>
-          <div class="flex items-center justify-between mt-4">
-            <span class="text-blue-600 font-semibold text-lg">$1,200/mo</span>
-            <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full text-sm font-medium">Book Now</button>
+    <div class="max-w-6xl mx-auto space-y-16">
+      
+      <!-- School Gate -->
+      <div>
+        <h3 class="text-2xl font-semibold text-gray-800 mb-6">🏫 School Gate</h3>
+        <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8">
+          <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
+            <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Apartment" class="w-full h-56 object-cover">
+            <div class="p-5">
+              <h4 class="text-xl font-semibold text-gray-800">Classic Apartment</h4>
+              <p class="text-gray-600 mt-2">2 Bedrooms · Wi-Fi · Near EKSU</p>
+              <div class="flex items-center justify-between mt-4">
+                <span class="text-blue-600 font-semibold text-lg">$700/mo</span>
+                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full text-sm font-medium">Book Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
+            <img src="https://images.unsplash.com/photo-1600047509807-ba8f99d2cdde?auto=format&fit=crop&w=800&q=80" alt="Hostel Room" class="w-full h-56 object-cover">
+            <div class="p-5">
+              <h4 class="text-xl font-semibold text-gray-800">Student Lodge</h4>
+              <p class="text-gray-600 mt-2">1 Bedroom · 24/7 Light · Gated</p>
+              <div class="flex items-center justify-between mt-4">
+                <span class="text-blue-600 font-semibold text-lg">$500/mo</span>
+                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full text-sm font-medium">Book Now</button>
+              </div>
+            </div>
           </div>
         </div>
       </div>
 
-      <!-- Card 2 -->
-      <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
-        <img src="https://images.unsplash.com/photo-1600585154340-be6161a56a0c?auto=format&fit=crop&w=800&q=80" alt="Luxury Home" class="w-full h-56 object-cover">
-        <div class="p-5">
-          <h3 class="text-xl font-semibold text-gray-800">Luxury Home</h3>
-          <p class="text-gray-600 mt-2">4 Bedrooms · Pool · Lekki Phase 1</p>
-          <div class="flex items-center justify-between mt-4">
-            <span class="text-blue-600 font-semibold text-lg">$3,500/mo</span>
-            <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full text-sm font-medium">Book Now</button>
-          </div>
-        </div>
-      </div>
+      <!-- Satellite Gate -->
+      <div>
+        <h3 class="text-2xl font-semibold text-gray-800 mb-6">🛰️ Satellite Gate</h3>
+        <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8">
+          <div class="bg-white rounded-2xl overflow-
 
-      <!-- Card 3 -->
-      <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
-        <img src="https://images.unsplash.com/photo-1560184897-ae75f418493e?auto=format&fit=crop&w=800&q=80" alt="Cozy Studio" class="w-full h-56 object-cover">
-        <div class="p-5">
-          <h3 class="text-xl font-semibold text-gray-800">Cozy Studio</h3>
-          <p class="text-gray-600 mt-2">1 Bedroom · GRA Ikeja</p>
-          <div class="flex items-center justify-between mt-4">
-            <span class="text-blue-600 font-semibold text-lg">$800/mo</span>
-            <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full text-sm font-medium">Book Now</button>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
 
   <!-- Footer -->
   <footer class="bg-white py-6 text-center text-gray-600 border-t mt-10">
@@ -101,4 +97,5 @@
 
 </body>
 </html>
+
 
