--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
   </section>
 
-  <!-- Featured Listings by Category -->
+    <!-- Featured Listings by Category -->
   <section class="py-16 px-6 bg-gray-100">
     <h2 class="text-3xl md:text-4xl font-bold text-center text-gray-800 mb-12">
       Featured Listings by Location
@@ -87,7 +87,69 @@
       <div>
         <h3 class="text-2xl font-semibold text-gray-800 mb-6">🛰️ Satellite Gate</h3>
         <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8">
-          <div class="bg-white rounded-2xl overflow-
+          <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
+            <img src="https://images.unsplash.com/photo-1598300056393-4a3e4b74e0b2?auto=format&fit=crop&w=800&q=80" alt="Luxury Home" class="w-full h-56 object-cover">
+            <div class="p-5">
+              <h4 class="text-xl font-semibold text-gray-800">Luxury Duplex</h4>
+              <p class="text-gray-600 mt-2">3 Bedrooms · AC · Parking Space</p>
+              <div class="flex items-center justify-between mt-4">
+                <span class="text-blue-600 font-semibold text-lg">$1,200/mo</span>
+                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full text-sm font-medium">Book Now</button>
+              </div>
+            </div>
+          </div>
+          <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
+            <img src="https://images.unsplash.com/photo-1599423300746-b62533397364?auto=format&fit=crop&w=800&q=80" alt="Mini Flat" class="w-full h-56 object-cover">
+            <div class="p-5">
+              <h4 class="text-xl font-semibold text-gray-800">Mini Flat</h4>
+              <p class="text-gray-600 mt-2">1 Bedroom · Kitchen · Gated Compound</p>
+              <div class="flex items-center justify-between mt-4">
+                <span class="text-blue-600 font-semibold text-lg">$650/mo</span>
+                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full text-sm font-medium">Book Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Iworoko -->
+      <div>
+        <h3 class="text-2xl font-semibold text-gray-800 mb-6">🏠 Iworoko</h3>
+        <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8">
+          <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
+            <img src="https://images.unsplash.com/photo-1560184897-ae75f418493e?auto=format&fit=crop&w=800&q=80" alt="Cozy Studio" class="w-full h-56 object-cover">
+            <div class="p-5">
+              <h4 class="text-xl font-semibold text-gray-800">Cozy Studio</h4>
+              <p class="text-gray-600 mt-2">1 Bedroom · Borehole · Close to Market</p>
+              <div class="flex items-center justify-between mt-4">
+                <span class="text-blue-600 font-semibold text-lg">$400/mo</span>
+                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full text-sm font-medium">Book Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- Phase Two -->
+      <div>
+        <h3 class="text-2xl font-semibold text-gray-800 mb-6">🏡 Phase Two</h3>
+        <div class="grid md:grid-cols-3 sm:grid-cols-2 grid-cols-1 gap-8">
+          <div class="bg-white rounded-2xl overflow-hidden shadow-lg hover:shadow-2xl transition">
+            <img src="https://images.unsplash.com/photo-1599423300746-b62533397364?auto=format&fit=crop&w=800&q=80" alt="Modern Home" class="w-full h-56 object-cover">
+            <div class="p-5">
+              <h4 class="text-xl font-semibold text-gray-800">Modern Home</h4>
+              <p class="text-gray-600 mt-2">2 Bedrooms · Balcony · 24/7 Water</p>
+              <div class="flex items-center justify-between mt-4">
+                <span class="text-blue-600 font-semibold text-lg">$850/mo</span>
+                <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded-full text-sm font-medium">Book Now</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </section>
 
 
   <!-- Footer -->
@@ -97,5 +159,6 @@
 
 </body>
 </html>
+
 
 
